--- a/themes/getschwifty/layouts/blog/single.html
+++ b/themes/getschwifty/layouts/blog/single.html
@@ -6,7 +6,13 @@
 	<small class="text-center d-block text-muted">Posted on {{.Date.Format "Jan 2, 2006"}}</small>
 </div>
 
-<img src="{{ .Site.BaseURL }}images/blog/{{ .Params.featured_image }}" class="mx-auto d-block my-4" style="max-width:100%;width:800px" alt="">
+{{ if .Params.featured_image }}
+<img src="{{ .Site.BaseURL }}/{{ .Params.featured_image }}" class="mx-auto d-block my-4"  alt="">
+{{ else if .Params.image }}
+<img src="{{ .Site.BaseURL }}/{{ .Params.image }}" class="mx-auto d-block my-4"  alt="">
+{{ end }}
+
+
 
 <article style="max-width:890px" class="container w-100 my-5">
 	{{ .Content }}
