--- a/themes/getschwifty/layouts/blog/list.html
+++ b/themes/getschwifty/layouts/blog/list.html
@@ -14,7 +14,7 @@
                   <div class="featuredImage rounded" style="background-size:cover;background-position:center;background-image: url('{{.Site.BaseURL}}images/blog/{{ .Params.featured_image }}'); height: 200px;background-color:#fbfbfb;">   
                   </div>
                 {{ else if .Params.image }}
-                  <div class="featuredImage rounded" style="background-size:cover;background-position:center;background-image: url('{{ .Params.image }}'); height: 200px;background-color:#fbfbfb;">
+                  <div class="featuredImage rounded" style="background-size:cover;background-position:center;background-image: url('{{ .Site.BaseURL }}{{ .Params.image }}'); height: 200px;background-color:#fbfbfb;">
                   </div>
                 {{ end }}
             </div>
