--- a/themes/getschwifty/layouts/partials/header.html
+++ b/themes/getschwifty/layouts/partials/header.html
@@ -56,9 +56,9 @@
 	<meta name="description" content="Personal website and blog of Moski Doski. Geek. Smart-arse. Badass. Food enthusiast. Zombie survival theorist. Registered Wendigo. WSU Alumni, love the Cougs.">
 	<meta name="theme-color" content="#000000">
 
-	{{ if .RSSLink }}
-	<link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
-	<link href="{{ .RSSLink }}" rel="feed" type="application/rss+xml" title="{{ .Site.Title }}" />
+	{{ with .OutputFormats.Get "RSS" }}
+	<link href="{{ .RelPermalink }}" rel="alternate" type="application/rss+xml" title="{{ $.Site.Title }}" />
+	<link href="{{ .RelPermalink }}" rel="feed" type="application/rss+xml" title="{{ $.Site.Title }}" />
 	{{ end }}
 	
 	{{ partial "seo_schema.html" . }}
